Spacing fix (#37)
* Add space after PI

* Add space after PI for team selector

* Add spacing after section sub titles

* add spacing after legend icons

* Add spacing after settings icons

--- a/src/view/Champion/ChampionSection.scss
+++ b/src/view/Champion/ChampionSection.scss
@@ -45,6 +45,10 @@
         &.champion-section-text-description {
             white-space: pre-line;
         }
+        
+        & > b {
+            margin-right: 0.5em;
+        }
     }
 
     .champion-section-youtube {
